# easydaily

./: .gitignore  CLAUDE.md  DISTRIBUTION_PLAN.md  EXECUTION.md  PRD.md  README.md  cloud.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  attachments.rs  config.rs  mod.rs  notes.rs  system.rs  tags.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai.rs  fullscreen.rs  idle.rs  mod.rs  notification.rs  scheduler.rs  startup.rs  storage.rs  tray.rs
src/components/common/: AiResultModal.tsx  Button.tsx  Card.tsx  ConfirmationModal.tsx  Input.tsx  Modal.tsx  Select.tsx  StandupPlanModal.tsx  SummaryViewerModal.tsx  TagChip.tsx  TagEditorModal.tsx  Toggle.tsx  index.ts
src/components/layout/: Navbar.tsx  PageContainer.tsx  Titlebar.tsx  index.ts
src/components/notes/: DayCard.tsx  NoteEditorModal.tsx  NoteItem.tsx  index.ts
src/components/notification/: NotificationPopup.tsx  index.ts  (+1 more)
src/hooks/: index.ts  useAiSummary.ts  useAiUsage.ts  useBackendEvents.ts  useConfig.ts  useInitializeApp.ts  useNotes.ts  useNotification.ts  useTags.ts  useUpdater.ts
src/locales/: en-US.json  index.ts  pt-BR.json
src/pages/: HistoryPage.tsx  QuickActionsPage.tsx  SettingsPage.tsx
src/stores/: mockData.ts  useStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: logger.ts
(+2 files in other folders)
