[package]
name = "easydaily"
version = "1.0.4"
description = "EasyDaily - Document your daily activities"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
winapi = { version = "0.3", features = ["winuser", "sysinfoapi", "windef", "playsoundapi"] }
winreg = "0.55"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
